tests/neg-custom-args/captures/lazyvals5.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyvals5.scala:32:41 ------------------------------------
32 |  val v0:  () -> () ->{io} String      = () => t.memberLazy     // error
   |                                         ^^^^^^^^^^^^^^^^^^
   |                                         Found:    () ->{t} () ->{io} String
   |                                         Required: () -> () ->{io} String
   |
   |                                         Note that capability `t` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyvals5.scala:34:41 ------------------------------------
34 |  val v1:  () -> String                = () => t.memberLazy()   // error
   |                                         ^^^^^^^^^^^^^^^^^^^^
   |                                         Found:    () ->{t} String
   |                                         Required: () -> String
   |
   |                                         Note that capability `t` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/lazyvals5.scala:36:47 ----------------------------------
36 |  val v3: (() -> String)^{c.console}   = () => c.memberLazy()   // error (but should this be allowed?)
   |                                               ^
   |                                    Reference `c` is not included in the allowed capture set {c.console}
   |                                    of an enclosing function literal with expected type () ->{c.console} String.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyvals5.scala:37:41 ------------------------------------
37 |  val v4:  () -> String                = () => t.memberMethod() // error
   |                                         ^^^^^^^^^^^^^^^^^^^^^^
   |                                         Found:    () ->{t} String
   |                                         Required: () -> String
   |
   |                                         Note that capability `t` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/lazyvals5.scala:40:34 ----------------------------------
40 |  val v6: () ->{c} String = () => funky // error
   |                                  ^^^^^
   |                                  References {t, c} are not all included in the allowed capture set {c}
   |                                  of an enclosing function literal with expected type () ->{c} String.
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/lazyvals5.scala:41:36 ----------------------------------
41 |  val v6_1: () ->{t} String = () => funky // error
   |                                    ^^^^^
   |                                    References {t, c} are not all included in the allowed capture set {t}
   |                                    of an enclosing function literal with expected type () ->{t} String.
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/lazyvals5.scala:61:61 ----------------------------------
61 |  val v9: () ->{c2.memberLazy, t2.memberLazy} String = () => funky2 // error (but should this be allowed?)
   |                                                             ^^^^^^
   |             References {t2, c2} are not all included in the allowed capture set {c2.memberLazy, t2.memberLazy²}
   |             of an enclosing function literal with expected type () ->{c2.memberLazy, t2.memberLazy} String.
   |
   |             where:    memberLazy  is a lazy value in class Clazz2
   |                       memberLazy² is a lazy value in trait Trait2
